# progetto-tesi

./: .gitignore  LICENSE  db_connection.py  embedding.py  extract_text.py  files_embedding_v1.py  files_embedding_v2.py  generate_embeddings.py  main.py  pyproject.toml  requirements.txt  search.py  sql2025.sql
backup/: files_embedding_v2 backup.py
chat_history/: chat_history_a.json
evaluation_results/: test_20260119_164525.json  test_20260119_164635.json  test_20260119_164748.json
evaluation_results/smoke/: test_20260305_124146.json  test_20260305_154204.json  test_20260305_172624.json
main/: db_connection.py  embedding.py  extract_text.py  files_embedding.py  files_embedding_v1.py  files_embedding_v2.py  llm.py  main.py  main_llm.py  main_llm_2.py  prova.py  search.py
main/BACKUP/: 1-Generatore testIbrido.py  1integration_guide_v2.py  2-Framework di valutazione multilivello  3compare_results.py  README_v2.md  evaluation-pipeline copy.py  evaluation_pipeline copy 2.py  evaluation_pipeline copy 3.py  evaluation_pipeline copy.py  evaluation_pipeline.py  evaluation_pipeline_official_long version copy.py  evaluation_pipeline_v1 copy.py  files_processing_with_semantic_chunking.py  integration_direct_evaluation.py  test_20260225_161917.json  test_20260225_171120.json
main/chatbot/: main.py
main/docs_embedding/: files_embedding.py
main/evaluation/: Sample_RI.docx  compare_results.py  evaluation_pipeline.py  gold_dataset.json  question_generator.py  span_refinement_output.json
main/file_embedding/: db_connection.py  embedding.py  extract_text.py  extract_text_backup.py  extract_text_no_ext_link_handling.py  files_embedding.py  files_processing.py  files_processing_v2.py  prova.py
main/llm/: app.py  app_backup.py  app_no_psw.py  evaluation copy.py  evaluation.py  evaluation_2.py  evaluation_pipeline.py  evaluation_v2.py  gold_dataset.json  integration_direct.py  keyword_search.py  llm.py  llm_class.py  llm_tools.py  main.py  main_llm.py  mainllm.py  prompt.txt  prova.py  prova_llm.py  question_generator.py  rag_evaluation_pipeline_v2.py  search copy.py  search.py  search_backup.py  semantic_search.py  ui.py  userinterface.py
main/prompts/: prompt_1a.txt  prompt_2.txt
(+19 files in other folders)
